# MonCat

./: MonCat.cabal  README.md
src/MonCat/: BiNat.hs  Bifunctor.hs  Compose.hs  Day.hs  Endo.hs  Exp.hs  Free.hs  FreeAp.hs  FreeAr.hs  FreeMon.hs  FreeMonIn.hs  Id.hs  MonCat.hs  MonInMonCat.hs  Nat.hs  PCom.hs  Profunctor.hs  Proxy.hs  Trivial.hs  WeakArrow.hs
test/MonCat/: MonCatSpec.hs
