name:                MonCat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MonCat#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     MonCat.BiNat
                       MonCat.Bifunctor
                       MonCat.Compose
                       MonCat.Day
                       MonCat.Endo
                       MonCat.Exp
                       MonCat.Free
                       MonCat.FreeAp
                       MonCat.FreeAr
                       MonCat.FreeMon
                       MonCat.FreeMonIn
                       MonCat.Id
                       MonCat.MonCat
                       MonCat.MonInMonCat
                       MonCat.Nat
                       MonCat.PCom
                       MonCat.Profunctor
                       MonCat.Proxy
                       MonCat.Trivial
                       MonCat.WeakArrow
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  other-modules:       MonCat.MonCatSpec
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && <5
                     , MonCat
                     , hspec == 2.*
                     , QuickCheck           